re-work of spatial APIs